karakeep/chrome-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome
  namespace: karakeep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chrome
  template:
    metadata:
      labels:
        app: chrome
    spec:
      containers:
      - name: chrome
        image: harbor.andreybondarenko.com/google/zenika-hub/alpine-chrome:123
        args:
          - --no-sandbox
          - --disable-gpu
          - --disable-dev-shm-usage
          - --remote-debugging-address=0.0.0.0
          - --remote-debugging-port=9222
          - --hide-scrollbars
        ports:
        - containerPort: 9222
