karakeep/karakeep-deployment.yaml


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karakeep
  namespace: karakeep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karakeep
  template:
    metadata:
      labels:
        app: karakeep
    spec:
      containers:
      - name: web
        image: harbor.andreybondarenko.com/github/karakeep-app/karakeep:release
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: karakeep-data
          mountPath: /data
        resources:
          requests:
            cpu: 10m
            memory: 641Mi
          limits:
            memory: 641Mi
      volumes:
      - name: karakeep-data
        persistentVolumeClaim:
          claimName: karakeep-data
