karakeep/meilisearch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  namespace: karakeep
  labels:
    app: karakeep
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/instance: meilisearch
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: argoCD
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
      - name: meilisearch
        image: harbor.andreybondarenko.com/dockerhub/getmeili/meilisearch:prototype-v1.24.0.s3-snapshots-5
        volumeMounts:
        - name: meili-data
          mountPath: /meili_data
        resources:
          requests:
            cpu: 10m
            memory: 1250Mi
          limits:
            memory: 1250Mi
      volumes:
      - name: meili-data
        persistentVolumeClaim:
          claimName: meili-data
