karakeep/chrome-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chrome
  namespace: karakeep
  labels:
    app: chrome
    app.kubernetes.io/name: chrome
    app.kubernetes.io/instance: chrome
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: argoCD
spec:
  type: ClusterIP
  selector:
    app: chrome
  ports:
    - port: 9222
      targetPort: 9222
