karakeep/karakeep-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: karakeep
  namespace: karakeep
  labels:
    app: karakeep
    app.kubernetes.io/name: karakeep
    app.kubernetes.io/instance: karakeep
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: argoCD
spec:
  type: ClusterIP
  selector:
    app: karakeep
  ports:
    - port: 3000
      targetPort: 3000
