karakeep/meilisearch-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: karakeep
spec:
  type: ClusterIP
  selector:
    app: meilisearch
  ports:
    - port: 7700
      targetPort: 7700
